@@ -1,3 +1,9 @@
+globus-gridftp-server (12.18-1+gt6.@distro@) @distro@; urgency=low
+
+  * add simple checksum read throttling
+
+ -- Globus Toolkit <support@globus.org>  Mon, 03 Jun 2019 08:58:23 -0500
+
 globus-gridftp-server (12.17-1+gt6.@distro@) @distro@; urgency=low
 
   * send markers in stream mode when requested by 'OPTS RETR Markers=n;'
